# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./contact";
 export * from "./estimator";
+export * from "./projects";
